--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 
 <body>
+  <img src="nilutpol.png" alt="Nilutpol Bora profile picture" />
   <table cellspacing="20">
     <tr>
-      <td><img src="nilutpol.png" alt="Nilutpol Bora profile picture" /></td>
+      <td></td>
       <td>
         <h1>Nilutpol Bora</h1>
         <p>
